--- a/.travis.yaml
+++ b/.travis.yaml
@@ -6,7 +6,7 @@ services:
   - mongodb
   - redis-server
 env:
-  - NODE_ENV=ci
+  - NODE_ENV=ci PORT=3000
 cache:
   directories:
     - node_modules
@@ -14,4 +14,7 @@ cache:
 install:
   - npm install
   - npm run build
-
+script:
+  - nohup npm run start &
+  - sleep 3
+  - npm run test
